[package]
name = "ouster_parser"
version = "0.1.0"
edition = "2021"
description = "Parse pcap file to extract Ouster Lidar data and write them into PCD files"

[dependencies]
pcap-parser = { version = "0.15", features = ["data"] }
packet = { path = "3rdparty/rust-packet" }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] } 
hashbrown = "0.14"
memmap2 = "0.9"
